--- a/index.html
+++ b/index.html
@@ -5,82 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>yourname.</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="Bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="loading">
-        <div id="spinner"></div>
-    </div>
-    <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-    <div id="title">yourname.</div><br>
+<div id="loading">
+    <div id="spinner"></div>
+</div>
+<div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
+    <div id="title">Luke Aulbert </div><br>
     <div id="links">
-        <a href="#skills">skills</a>
+        <a href="#skills"> Javascript,HTML,CSS,Node </a>
         <a href="#work" style="margin:0px 60px;">works</a>
         <a href="#contact">contact</a>
+        <img src="C:\Users\AM4\html\profile image.jfif" alt="My picture">
     </div>
-    </div>
+</div>
 
-    <center>
+<center>
     <div id="middle">
-        <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
-            if you're reading this, that mean's you can read<br>
-            <button class="btn_one">haha ok</button>
+
+    </div>
+</center>
+
+<div id="portfolio">
+    <div id="skills">
+        <h1>Skills.</h1>
+        <div>
+            <p> Dedicated and motivated web designer, who is dedicated to learning new skills and spends time daily trying to learn new skills and concepts. Commited daily to creating new projects and templates. Knowledgeable in Javascript, CSS, HTML, and some experience with Node JS.
         </div>
     </div>
-    </center>
 
-    <div id="portfolio">
-             <div id="skills">
-                 <h1>skills.</h1>   
-                 <div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate. Sed tortor enim, rhoncus vel mauris vitae, elementum condimentum augue. Donec fermentum lobortis lectus, in feugiat turpis faucibus et. Pellentesque luctus metus vitae augue lobortis sagittis vitae sit amet enim. Morbi egestas velit ac arcu fermentum lacinia. Nullam eget hendrerit neque. Cras et laoreet ante. Vivamus condimentum euismod commodo. Nulla pulvinar, turpis vitae condimentum tempor, ex ex eleifend quam, et maximus sapien mi sed est. Donec elit mi, dictum nec magna quis, mollis sollicitudin ligula. Maecenas ullamcorper ante vel ullamcorper mollis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                        </p>
-                 </div> 
-             </div>
-         
-              <div id="work">
-                 <h1>works.</h1>
+    <div id="work">
+        <h1> Works.</h1>
 
-                 <div class="project">
-                 <h2>project title 1</h2>
-                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.</div>
-                 <button class="btn_one">visit project</button>
-                </div>
+        <div class="project">
+            <h2>Javascript </h2>
+            <div>Worked on Creating a Javascript Clock. Utilized CSS and HTML. </div>
+            <a href="https://codepen.io/ScorpionJungle/pen/XWJqyNK" class="button">Node JS Project</a>
+        </div>
 
-                <div class="project">
-                 <h2>project title 2</h2>
-                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In bibendum tincidunt nulla, id semper mi cursus ac. Fusce turpis urna, condimentum sit amet dolor at, vulputate ultrices massa. Vestibulum non euismod nulla, eu pretium risus. Curabitur porta molestie vulputate.
-                 </div>
-                 <button class="btn_one">visit project</button>
-                 <button class="btn_two">code</button>
-                </div>
+        <div class="project">
+            <h2>Hackathon Project </h2>
+            <div>Participated in a Hackathon involving stocks. Creating an application in showing stocks in real time.
+            </div>
+            <button class="button">visit project</button>
+            <button class="button">code</button>
+        </div>
 
-             </div>
-         
-              <div id="contact">
-                 <h1>contact.</h1> 
-                 <form>
-                     <input type="text" placeholder="name" required>
-                     <input type="email" placeholder="email" required><br>
-                     <textarea placeholder="your message" required rows="5"></textarea><br>
-                     <button class="btn_one">send</button>
-                 </form> 
-                 <div id="details">
-                    <a class="btn_social"><i class="fas fa-phone"></i></a>
-                    <a class="btn_social"><i class="fas fa-at"></i></a>
-                    <a class="btn_social"><i class="fab fa-twitter"></i></a>
-                    <a class="btn_social"><i class="fab fa-dribbble"></i></a>
-                 </div>   
-             </div>
+        <div class="project">B
+            <h2>Node.Js Web Scraper</h2>
+            <div>Made a web scraper with Node.JS a backend javascript framework.
+            </div>
+            <a href="https://github.com/Hijenx" class="button">Node JS Project</a>
+        </div>
+
+
     </div>
-    <div id="footer">
-        made on earth by a human <br><br> <a href="https://imfunniee.github.io">imfunniee</a>
+
+    <div id="contact">
+        <h1>contact.</h1>
+        <form>
+            <input type="text" placeholder="name" required>
+            <input type="email" placeholder="email" required><br>
+            <textarea placeholder="your message" required rows="5"></textarea><br>
+            <button class="btn_one">send</button>
+        </form>
+        <div id="details">
+            <a class="btn_social"><i class="fas fa-phone"></i></a>
+            <a class="btn_social"><i class="fas fa-at"></i></a>
+            <a class="btn_social"><i class="fab fa-twitter"></i></a>
+            <a class="btn_social"><i class="fab fa-dribbble"></i></a>
+        </div>
     </div>
+</div>
+<div id="footer">
+
+</div>
 <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
