--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#skills"> Javascript,HTML,CSS,Node </a>
         <a href="#work" style="margin:0px 60px;">works</a>
         <a href="#contact">contact</a>
-        <img src="C:\Users\AM4\html\profile image.jfif" alt="My picture">
+        <img src="image.jpg" alt="My picture">
     </div>
 </div>
 
