--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
     <div id="title">Luke Aulbert </div><br>
-    <div id="links">
+    <div id="topnav">
         <a href="#skills"> Javascript,HTML,CSS,Node </a>
         <a href="#work" style="margin:0px 60px;">works</a>
         <a href="#contact">contact</a>
