--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </div>
 <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
     <div id="title">Luke Aulbert </div><br>
-    <div id="topnav">
-        <a href="#skills"> Javascript,HTML,CSS,Node </a>
-        <a href="#work" style="margin:0px 60px;">works</a>
-        <a href="#contact">contact</a>
-        <img src="image.jpg" alt="My picture">
-    </div>
+    
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
 </div>
 
 <center>
