--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         </div>
 
-        <div class="project">B
+        <div class="project">
             <h2>Node.Js Web Scraper</h2>
             <div>Made a web scraper with Node.JS a backend javascript framework.
             </div>
