--- a/index.html
+++ b/index.html
@@ -17,69 +17,21 @@
 
 <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
     <div class="topnav">
-        <a href="#skills"> Javascript,HTML,CSS,Node </a>
-        <a href="#work" style="margin:0px 60px;">works</a>
-        <a href="#contact">contact</a>
+        <a href="Website.html"> About</a>
+        <a href="DaProjects.html" style="margin:0px 60px;">works</a>
+        <a href="contact.html">contact</a>
     </div>
-        
+
 </div>
 
 
 <div class="grid-container">
-<div id="portfolio">
-    <div id="skills">
-        <h1>Skills.</h1>
-        <div>
-            <p> Dedicated and motivated web designer, who is dedicated to learning new skills and spends time daily trying to learn new skills and concepts. Commited daily to creating new projects and templates. Knowledgeable in Javascript, CSS, HTML, and some experience with Node JS.
-        </div>
-    </div>
+    <div id="portfolio">
+        <div id="skills">
 
-    <div id="work">
-        <h1> Works.</h1>
-
-        <div class="project">
-            <h2>Javascript </h2>
-            <div>Worked on Creating a Javascript Clock. Utilized CSS and HTML. </div>
-            <a href="https://codepen.io/ScorpionJungle/pen/XWJqyNK" class="button1">Node JS Project</a>
-        </div>
-
-        <div class="project">
-            <h2>Hackathon Project </h2>
-            <div>Participated in a Hackathon involving stocks. Creating an application in showing stocks in real time.
-            </div>
-            <a href="something" class="button1">View Project</a>
-
-        </div>
-
-        <div class="project">
-            <h2>Node.Js Web Scraper</h2>
-            <div>Made a web scraper with Node.JS a backend javascript framework.
-            </div>
-            <a href="https://github.com/Hijenx" class="button1">Node JS Project</a>
-        </div>
-
+    <div id="footer">
 
     </div>
-
-    <div id="contact">
-        <h1>contact.</h1>
-        <form action = "mail.php" method="Post">
-            <input type="text" placeholder="name" required>
-            <input type="email" placeholder="email" required><br>
-            <textarea placeholder="your message" required rows="5"></textarea><br>
-            <button class="btn_one">send</button>
-        </form>
-        <div id="details">
-            <a class="btn_social"><i class="fas fa-phone"></i></a>
-            <a class="btn_social"><i class="fas fa-at"></i></a>
-            <a class="btn_social"><i class="fab fa-twitter"></i></a>
-            <a class="btn_social"><i class="fab fa-dribbble"></i></a>
-        </div>
-    </div>
-</div>
-<div id="footer">
-
-</div>
-<script src="index.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
