--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     </div>
 
 </div>
+    
+    <select id ="country" name="country">
+                        <option value="China"> China </option>
+                        <option value="USA"> USA </option>
+                        <option value = "Russia"> Russia</option>
+                    </select>
 
 
 <div class="grid-container">
