--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
     <div class="topnav">
-        <a href="Website.html"> About</a>
+        <a href="index.html"> About</a>
         <a href="DaProjects.html" style="margin:0px 60px;">works</a>
         <a href="contact.html">contact</a>
     </div>
