--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,9 @@
         <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+<a href="index.html"> About</a>
+        <a href="DaProjects.html" style="margin:0px 60px;">works</a>
+        <a href="contact.html">contact</a>
 <div id="contact">
     <h1>contact.</h1>
     <form action = "mail.php" method="Post">
